package behavioral.chain_of_respon.atm.bt_CA1;

public interface MyStreamListener<T> {
    public void listen(T t);
}
